syntax = "proto3";

package services.users.v1;
import "com/interfaces/users/v1/wallet.proto";


message DepositCurrencyRequest {
    string token = 1;
    string iban = 2;
    string currency = 3;
    float amount = 4;
}

message DepositCurrencyResponse {
    repeated com.interfaces.users.v1.ProtoWallet wallets = 1;
}