syntax = "proto3";

package services.users.v1;

import "com/interfaces/users/v1/user.proto";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    com.interfaces.users.v1.ProtoUser user = 1;
    string token = 2;
}
